<resources>
    <!-- Firebase auth -->
    <string name="name_app_full">Easy Transports</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Easy Transports</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Easy Transports now!</string>
    <string name="btn_link_to_login">Already registered. Log me In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_password">Type your password</string>

    <!-- bottom navigation menu -->
    <string name="bottom_menu_item_schedule">Schedules</string>
    <string name="bottom_menu_item_tickets">My Tickets</string>
    <string name="bottom_menu_item_settings">Account Settings</string>
    <string name="bottom_menu_item_stops">Stops</string>
    <string name="bottom_menu_item_agencies">Agencies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Schedules form-->
    <string name="transport_dropdown_title">Transport Company:</string>
    <string name="origin_stop_title">Origin:</string>
    <string name="start_writing_hint">See suggestions</string>
    <string name="destination_stop_title">Destination:</string>
    <string name="time_title">Time: </string>
    <string name="time_variance_title">Time Variance: </string>
    <string name="departure">Departure: </string>
    <string name="destination">Destination: </string>

    <string name="search_schedules_btn">Search</string>
    <string name="buy_ticket_btn">Buy all tickets</string>
    <string name="route_map_str">See route in map</string>
    <string name="origin_error_message">Origin stop must be selected</string>
    <string name="stop_error_message">You must select a valid stop from the available list</string>
    <string name="stop_error_message2">Origin stop must be different from Destination stop</string>
    <string name="destination_error_message">Destination stop must be selected</string>
    <string name="schedule_details_message">Schedule details</string>
    <string name="schedule_details_message2">Trips to reach the destination</string>
    <!-- Tickets -->
    <string name="no_tickets">You have no tickets to use. Go to the "Schedules" screen to purchase tickets.</string>
    <string name="use_ticket">Use ticket</string>
    <string name="schedule_label">Schedule</string>
    <string name="transports_label">Transports</string>
    <string name="origin_destination_label">Origin/Destination</string>
    <string name="ticket_state_label">Ticket State</string>
    <string name="ticket_purchase_date">Ticket purchased at</string>
    <string name="ticket_duration_label">Duration: </string>

    <!-- Get ticket status error-->
    <string name="ticket_status_error_message">Could not fetch ticket status. Some tickets\'s status my not be updated</string>
    <string name="ticket_purchase_error_title">Error purchasing Tickets</string>
    <string name="ticket_purchase_error_message">Tickets could not be purchased. Make sure you are connected to the internet.</string>
    <string name="ticket_purchase_error_message2">Could not handle response from server.</string>
    <string name="ticket_purchase_error_message3">Could not retrieve tickets.</string>

    <!-- QR code error-->
    <string name="ticket_qr_code_error">Could not get QR code of ticket.</string>
    <string name="ticket_qr_code_error_title">Ticket QR code error</string>
    <string name="title_activity_stop_detail">StopDetailActivity</string>

    <!-- agency detail-->
    <string name="agency_id">ID</string>
    <string name="agency_url">URL</string>
    <string name="agency_timezone">Timezone</string>
    <string name="agency_lang">Language</string>
    <string name="agency_phone">Contact</string>
    <string name="agency_name">Agency</string>
    <string name="stop_id">Stop ID</string>
    <string name="stoptimes">Stop Times</string>
    <string name="stop_name">Stop Name</string>
    <string name="title_activity_route_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="geojson_opener_unable_to_read">Unable to read</string>
    <string name="geojson_opener_unable_to_parse">Unable to parse</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
