<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchedulesFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:divider="?android:dividerHorizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerHorizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/departure"
                    android:textSize="18dp" />

                <AutoCompleteTextView
                    android:id="@+id/departure_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/start_writing_hint"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="#000000"
                    android:textColorHint="#737373" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerHorizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/destination"
                    android:textSize="18dp" />

                <AutoCompleteTextView
                    android:id="@+id/arrival_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:hint="@string/start_writing_hint"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="#000000"
                    android:textColorHint="#737373" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/time_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="Time provided: "
                android:textSize="18dp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/simpleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Departure"/>
                <RadioButton
                    android:id="@+id/simpleRadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination"/>
            </RadioGroup>
        </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerHorizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/departure_title"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_date"
                    android:layout_alignStart="@+id/btn_date"
                    android:layout_alignLeft="@+id/btn_date"
                    android:background="@android:color/transparent"
                    android:text="SELECT TIME" />

            </LinearLayout>
            <!--
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:text="Transport Company:" />

<DatePicker
    android:id="@+id/arrival_date_picker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:datePickerMode="spinner"
    android:spinnersShown="true"
    android:calendarViewShown="false"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dropdown"
    android:theme="@style/date_picker_theme"
    />
-->

            <Button
                android:id="@+id/schedules_submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/search_schedules_btn"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>